kubernetes/helm/storage/rook-ceph/manifests/objectstore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-rgw-ceph-objectstore
spec:
  rules:
    - host: &host s3.k8s.tylercash.dev
      http:
        paths:
          - backend:
              service:
                name: rook-ceph-rgw-ceph-objectstore
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: s3-letsencrypt-certificate
